--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
     <section class="bg-dark text-white py-5">
         <div class="row align-items-center px-3 px-md-4">
             <!-- Image -->
-            <div class="col-md-6 col-12 animate-slide-up mb-4 mb-md-0" style="animation-delay: 0.3s;">
-                <img src="./images/p1.jpg" alt="Team Innovation" class="img-fluid rounded-4">
+            <div class="col-md-6 col-12 animate-slide-up mb-4 mb-md-0 pt-5" style="animation-delay: 0.3s;">
+                <img src="./images/p1.jpg" alt="Team Innovation" class="img-fluid rounded-5 w-100"
+                    style="height: 300px;">
             </div>
             <!-- Text Content -->
             <div class="col-md-6 col-12 ps-md-5 animate-slide-up" style="animation-delay: 0.5s;">
@@ -210,14 +211,15 @@
 
             <!-- Image -->
             <div class="col-md-6 col-12 animate-slide-up pe-md-4" style="animation-delay: 0.3s;">
-                <img src="./images/p2.jpg" alt="Team Innovation" class="img-fluid rounded-4 w-100"
+                <img src="./images/p2.jpg" alt="Team Innovation" class="img-fluid rounded-5 w-100"
                     style="height: auto; max-height: 550px;">
             </div>
         </div>
     </div>
 
     <div class="container-fluid bg-light py-5">
-        <h1 class="fw-bold animate-slide-up pt-5 mb-5 ps-5" style="animation-delay: 0.3s;">Bringing Ideas to Life</h1>
+        <div class="display-6 fw-bold animate-slide-up pt-5 mb-5 ps-5" style="animation-delay: 0.3s;">Bringing Ideas to
+            Life</div>
         <div class="row g-4 ps-5">
             <!-- Step 1 -->
             <div class="col-md-4">
@@ -253,8 +255,9 @@
     <!--Our Services-->
 
     <div class="container-fluid py-5 px-3, px-md-5">
-        <h1 class="fw-bold animate-slide-up mb-5 pt-3" style="animation-delay: 0.3s;">Our Comprehensive<br>Services
-            Suite</h1>
+        <div class="display-6 fw-bold animate-slide-up mb-5 pt-3" style="animation-delay: 0.3s;">Our
+            Comprehensive<br>Services
+            Suite</div>
         <div class="row align-items-center g-4">
 
             <div class="col-md-4 animate-slide-up pe-5" style="animation-delay: 0.4s;">
@@ -391,6 +394,20 @@
     </div>
 
 
+    <div class="container-fluid bg-light py-5">
+
+        <div class="row align-items-center pt-5 ps-5">
+            <div class="display-5 fw-bold animate-slide-up mb-5 pt-3" style="animation-delay: 0.1s;">Our Diverse
+                Portfolio of <br>
+                Projects
+            </div>
+            <div class="col-md-8 pe-5">
+                <img src="./images/p7.jpg" alt="Portfolio of project" class="img-fluid rounded-5 w-100 animate-slide-up"
+                    style="height: 350px; animation-delay: 0.2s;">
+            </div>
+
+        </div>
+    </div>
 
 
 
