--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 style="margin-left: 0; margin-right: 0; width: 97%;">
                 <div class="d-flex align-items-center">
                     <div class="rounded-circle d-flex justify-content-center align-items-center"
-                        style="width: 70px; height: 70px; background-color: #68c466;">
+                        style="width: 70px; height: 70px; background-color: #68c466; rotate: -30deg;">
                         <i class="fa-solid fa-arrow-down text-white fs-4"></i>
                     </div>
                     <div class="ms-3">
@@ -169,7 +169,7 @@
                         style="animation-delay: 0.4s;">
                         <div class="d-flex align-items-center">
                             <div class="rounded-circle d-flex justify-content-center align-items-center"
-                                style="width: 60px; height: 60px; background-color: #68c466;">
+                                style="width: 60px; height: 60px; background-color: #68c466; rotate: -30deg;">
                                 <i class="fa-solid fa-arrow-down text-white fs-4"></i>
                             </div>
                             <div class="ms-3">
@@ -183,11 +183,11 @@
                         style="animation-delay: 0.5s;">
                         <div class="d-flex align-items-center">
                             <div class="rounded-circle d-flex justify-content-center align-items-center"
-                                style="width: 60px; height: 60px; background-color: #68c466;">
+                                style="width: 60px; height: 60px; background-color: #68c466; rotate: -30deg;">
                                 <i class="fa-solid fa-arrow-down text-white fs-4"></i>
                             </div>
                             <div class="ms-3">
-                                <h4 style="color: #68c466;">Collaborative</h4>
+                                <h4 style="color: #68c466;">Creativity</h4>
                                 <p class="mb-0 small">Lorem ipsum dolor amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
@@ -197,11 +197,11 @@
                         style="animation-delay: 0.6s;">
                         <div class="d-flex align-items-center">
                             <div class="rounded-circle d-flex justify-content-center align-items-center"
-                                style="width: 60px; height: 60px; background-color: #68c466;">
+                                style="width: 60px; height: 60px; background-color: #68c466; rotate: -30deg;">
                                 <i class="fa-solid fa-arrow-down text-white fs-4"></i>
                             </div>
                             <div class="ms-3">
-                                <h4 style="color: #68c466;">Collaborative</h4>
+                                <h4 style="color: #68c466;">Excellence</h4>
                                 <p class="mb-0 small">Lorem ipsum dolor amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
@@ -828,9 +828,7 @@
 
         <div class="mx-auto my-4" style="width: 98%; height: 3px; background-color: black;"></div>
 
-
         <div class="row g-4 text-start pt-5">
-
             <!-- Logo & Description -->
             <div class="col-12 col-md-4 ps-3 pe-5">
                 <img src="./images/logo.png" alt="logo" class="img-fluid mb-3 ps-3" style="max-width: 50%;">
@@ -840,65 +838,73 @@
                 </p>
             </div>
 
-            <!-- Navigations -->
-            <div class="col-6 col-md-3 ps-5 gap-3">
-                <h4 class="fw-bold mb-5">Navigations</h4>
-                <p class="mb-1"><a href="/faq" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> FAQ's</a></p>
-                <p class="mb-1"><a href="/privacy-policy" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Privacy
-                        Policy</a></p>
-                <p class="mb-0"><a href="/terms" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Terms & Conditions</a>
-                </p>
+            <!-- Navigation, Company, and Contact in one row on small screen -->
+            <div class="col-12 col-md-8">
+                <div class="d-flex flex-wrap flex-column flex-sm-row text-start">
+                    <!-- Navigations -->
+                    <div class="flex-fill mb-4 mb-md-0 ps-3 pe-3">
+                        <h4 class="fw-bold mb-4">Navigations</h4>
+                        <p class="mb-1"><a href="/faq" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> FAQ's</a></p>
+                        <p class="mb-1"><a href="/privacy-policy" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Privacy Policy</a></p>
+                        <p class="mb-0"><a href="/terms" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Terms & Conditions</a>
+                        </p>
+                    </div>
+
+                    <!-- Company -->
+                    <div class="flex-fill mb-4 mb-md-0 ps-3 pe-3">
+                        <h4 class="fw-bold mb-4">Company</h4>
+                        <p class="mb-1"><a href="/about" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> About</a></p>
+                        <p class="mb-1"><a href="/team" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Team</a></p>
+                        <p class="mb-0"><a href="/contact" class="text-secondary text-decoration-none"><i
+                                    class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Contact</a></p>
+                    </div>
+
+                    <!-- Contact Information -->
+                    <div class="flex-fill ps-3 pe-3">
+                        <h4 class="fw-bold mb-4">Contact Information</h4>
+                        <p class="text-secondary mb-1"><i class="fa-solid fa-location-dot pe-2"
+                                style="color: #68c466;"></i> 4096 Modesto, CA 95350, USA</p>
+                        <p class="text-secondary mb-1"><i class="fa-solid fa-phone pe-2" style="color: #68c466;"></i> +1
+                            209 472 8764</p>
+                        <p class="text-secondary mb-0"><i class="fa-solid fa-envelope pe-2" style="color: #68c466;"></i>
+                            info@digiqu.com</p>
+                    </div>
+                </div>
             </div>
 
-            <!-- Company -->
-            <div class="col-6 col-md-2 ps-3 gap-3">
-                <h4 class="fw-bold mb-5">Company</h4>
-                <p class="mb-1"><a href="/about" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> About</a></p>
-                <p class="mb-1"><a href="/team" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Team</a></p>
-                <p class="mb-0"><a href="/contact" class="text-secondary text-decoration-none"><i
-                            class="fa-solid fa-circle fa-xs" style="color: #68c466;"></i> Contact</a></p>
-            </div>
 
-            <!-- Contact Information -->
-            <div class="col-12 col-md-3 ps-3 gap-3">
-                <h4 class="fw-bold mb-5">Contact Information</h4>
-                <p class="text-secondary mb-1"><i class="fa-solid fa-location-dot pe-2" style="color: #68c466;"></i>
-                    4096 Modesto, CA 95350, USA</p>
-                <p class="text-secondary mb-1"><i class="fa-solid fa-phone pe-2" style="color: #68c466;"></i> +1 209 472
-                    8764
-                </p>
-                <p class="text-secondary mb-0"><i class="fa-solid fa-envelope pe-2" style="color: #68c466;"></i>
-                    info@digiqu.com</p>
+            <div class="row g-4 text-start animate-slide-up pt-2" style="animation-delay: 0.3s;">
+
+                <div class="col-12 col-md-8 ps-3 pt-3">
+                    <div class="d-flex gap-2 ps-3">
+                        <a href="#"
+                            class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
+                            style="width: 35px; height: 35px;">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#"
+                            class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
+                            style="width: 35px; height: 35px;">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#"
+                            class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
+                            style="width: 35px; height: 35px;">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 text-center pt-4">
+                    <p class="text-secondary small">Copyright © 2025 DigiQU | Powered by DigiQU</p>
+                </div>
             </div>
         </div>
-
-        <div class="d-flex gap-3 pt-3 animate-slide-up ps-3 pt-5" style="animation-delay: 0.3s;">
-            <a href="#"
-                class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
-                style="width: 40px; height: 40px;">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#"
-                class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
-                style="width: 40px; height: 40px;">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#"
-                class="d-inline-flex align-items-center justify-content-center rounded-circle bg-dark text-white text-decoration-none"
-                style="width: 40px; height: 40px;">
-                <i class="fab fa-youtube"></i>
-            </a>
-        </div>
-
-
     </div>
-
-
     <script src="myscripts.js"></script>
 
 </body>
