Our Diverse Portfolio section button change.

--- a/index.html
+++ b/index.html
@@ -417,51 +417,49 @@
 
     <div class="container-fluid bg-light py-5">
 
-        <div class="row align-items-center pt-5 ps-5">
-            <div class="display-5 fw-bold animate-slide-up mb-5 pt-3" style="animation-delay: 0.1s;">Our Diverse
-                Portfolio of <br>
-                Projects
+        <!-- First Section -->
+        <div class="row align-items-center pt-5 ps-md-5 ps-3">
+            <div class="display-5 fw-bold animate-slide-up mb-5 pt-3 text-center text-md-start"
+                style="animation-delay: 0.1s;">
+                Our Diverse Portfolio of <br> Projects
             </div>
-            <div class="col-md-7 pe-4">
+            <div class="col-md-7 pe-md-4 order-1 order-md-1 mb-4 mb-md-0">
                 <img src="./images/z6.jpg" alt="Portfolio of project" class="img-fluid rounded-5 w-100 animate-slide-up"
-                    style="height: 360px; animation-delay: 0.2s;">
+                    style="height: 360px; object-fit: cover; animation-delay: 0.2s;">
             </div>
-
-            <div class="col-md-5 pe-5">
+            <div class="col-md-5 pe-md-5 order-2 order-md-2 mb-4 mb-md-0">
                 <div class="project-card animate-slide-up shadow-sm" style="animation-delay: 0.4s;">
-                    <div class="h1 fw-bold"> Interactive Brand Website for Corporation</div>
+                    <div class="h1 fw-bold">Interactive Brand Website for Corporation</div>
                     <p class="text-secondary pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</p><br>
-                    <div class="col-md-9 btn-wrapper-card animate-slide-up" style="animation-delay: 0.8s;">
-                        <div class="btn-bg-card ps-1"> →</div>
-                        <button class="btn-animated-card">Learn More — Now</button>
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="col-12 btn-wrapper animate-slide-up mt-3" style="animation-delay: 0.8s;">
+                        <div class="btn-bg ps-1"> →</div>
+                        <button class="btn-animated">Learn More — Now</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row align-items-center pt-5 ps-5">
-
-            <div class="col-md-5 pe-4">
+        <!-- Second Section -->
+        <div class="row align-items-center pt-5 ps-md-5 ps-3">
+            <div class="col-md-5 pe-md-4 order-2 order-md-1 mb-4 mb-md-0">
                 <div class="project-card animate-slide-up shadow-sm" style="animation-delay: 0.2s;">
-                    <div class="h1 fw-bold"> Strategic Digital Marketing Campaign for Startup</div>
+                    <div class="h1 fw-bold">Strategic Digital Marketing Campaign for Startup</div>
                     <p class="text-secondary pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</p><br>
-                    <div class="col-md-9 btn-wrapper-card animate-slide-up" style="animation-delay: 0.8s;">
-                        <div class="btn-bg-card ps-1"> →</div>
-                        <button class="btn-animated-card">Learn More — Now</button>
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="col-12 btn-wrapper animate-slide-up mt-3" style="animation-delay: 0.8s;">
+                        <div class="btn-bg ps-1"> →</div>
+                        <button class="btn-animated">Learn More — Now</button>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-7 pe-5">
+            <div class="col-md-7 pe-md-5 order-1 order-md-2 mb-4 mb-md-0">
                 <img src="./images/z7.jpg" alt="Portfolio of project" class="img-fluid rounded-5 w-100 animate-slide-up"
-                    style="height: 330px; animation-delay: 0.4s;">
+                    style="height: 330px; object-fit: cover; animation-delay: 0.4s;">
             </div>
         </div>
     </div>
+
 
     <!--Explore Our FAQ Section-->
 
@@ -771,7 +769,6 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-
 
         </div>
     </div>
